Solving Build error

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="logo">
     <a href="/index.html">
-      <img src="/images/pokemonpedia.png" alt="PokemonPedia">
+      <img src="/images/pokemonpedia.png" alt="PokemonPedia" />
     </a>
   </div>
   <div class="menu">
