Battle and Search Pokemon

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -4,6 +4,7 @@
       <img src="/images/pokemonpedia.png" alt="PokemonPedia" />
     </a>
   </div>
+  <h1>PokemonPedia</h1>
   <div class="menu">
     <ul>
       <li><a href="/index.html">Home</a></li>
