--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,3 +80,134 @@ main h1 {
   margin-top: 4rem;
   text-align: center;
 }
+
+#banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+#search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+#search input {
+  margin-right: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #000;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+}
+
+#search button {
+  background-color: var(--secondary-color);
+  color: #fff;
+  padding: 0.5rem;
+  border: 2px solid #000;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+#search button:hover {
+  background-color: var(--tertiary-color);
+}
+
+#pokemon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+#pokemon h2 {
+  margin-bottom: 1rem;
+}
+
+.card {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.card img {
+  width: auto;
+  height: 200px;
+  margin-bottom: 1rem;
+}
+
+.card h2 {
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+}
+
+.card-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(4, auto);
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card .card-body .type {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.card .card-body .abilities {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+
+.card .card-body .stats {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+}
+
+.card .card-body .stats ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+#pokemon-battle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+#pokemon-battle h2 {
+  text-align: center;
+}
+
+#fight-button {
+  width: 100px;
+  margin-top: 2rem;
+  background-color: var(--secondary-color);
+  color: #fff;
+  padding: 0.5rem;
+  border: 2px solid #000;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+#fight-button:hover {
+  background-color: var(--tertiary-color);
+}
