--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="/index.html">Home</a></li>
       <li><a href="/battle/index.html">Battle</a></li>
+      <li><a href="/history/index.html">History</a></li>
     </ul>
   </div>
 </nav>
